ENG-2270 Fix for Universe Pending Display container layout overflow
Summary:
Before:
{F5845}

After:
{F5846}

Test Plan:
Create a universe.
Go to Universe List display.
The pending display should not overflow outside it's parent component.

Reviewers: vit.pankin, ram, jeff

Reviewed By: jeff

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D3250

--- a/managed/ui/src/components/universes/UniverseStatus/UniverseStatus.scss
+++ b/managed/ui/src/components/universes/UniverseStatus/UniverseStatus.scss
@@ -111,7 +111,7 @@
 .status-pending-progress-container {
   display: inline-block;
   position: relative;
-  top: 8px;
+  top: 2px;
   width: 120px;
 
   .progress-bar {
@@ -121,4 +121,8 @@
 
 .status-pending {
   float: right;
+}
+
+.universe-pending-spinner {
+  display: inline;
 }
